body overflow fixed

--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@
   box-sizing: border-box;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 /*=========================================================
     SECTION
 =========================================================*/
